# TauriFileNavigator

./: .gitignore  LICENSE  README.md  fav  index.html  mac.ts  package-lock.json  package.json  platforms  postcss.config.js  tailwind.config.ts  tsconfig.json
src/: globals.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_ops.rs  filesystem_ops.rs  mod.rs  platform.rs  platform_ops.rs  tree.rs
src-tauri/src/commands/platform_ops/: macos.rs  non_macos.rs
src-tauri/src/commands/platform_ops/platform/: linux.rs  macos.rs  windows.rs
src-tauri/src/commands/platform_ops/platform/linux/: drives.rs  paths.rs
src-tauri/src/commands/platform_ops/platform/macos/: drives.rs  paths.rs
src-tauri/src/commands/platform_ops/platform/windows/: drives.rs  mod.rs  paths.rs
src-tauri/src/filesys/: drive_ops.rs  mod.rs
src-tauri/src/models/: mod.rs  pathinfo.rs
src-tauri/src/notifications/: mod.rs  watch_ops.rs
src-tauri/src/notifications/tests/: common.rs  mod.rs  watch_all.rs  watch_file_creation.rs  watch_file_deletion.rs  watch_file_modification.rs  watch_file_rename.rs  watch_folder_creation.rs  watch_folder_deletion.rs  watch_folder_rename.rs
src-tauri/src/platform/: mod.rs  unix.rs  windows.rs
src-tauri/src/search/: constants.rs  file_ops.rs  mod.rs  process_directory_entry.rs  regex.rs  search_ops.rs  types.rs
src-tauri/src/search/tests/: mod.rs  regex_tests.rs  search_count_tests.rs  search_tests.rs
src/custom-ui/: InputDialog.tsx  button.tsx
(+75 files in other folders)
