[package]
name = "decks"
version = "1.0.0"
description = "Decks"
authors = ["Basab"]
license = "Apache 2.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "dialog-all", "fs-all", "path-all", "system-tray" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.0"
time = "0.3.35"
tokio = { version = "1.0", features = ["full"] }
notify = "6.0"  
once_cell = "1.18.0"
dirs = "5.0.1"
regex = "1.10.2"
walkdir = "2.4.0"
log = "0.4"
env_logger = "0.10"
winapi = { version = "0.3", features = ["fileapi", "winnt"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.8.1"
